# trillek-server-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.lesser  README.md
include/: configuration.hpp  filesystem.hpp  instance.hpp  server.hpp  system.hpp
include/context/: context.hpp
src/: configuration.cpp  filesystem.cpp  server-host.cpp  server-main.cpp
src/context/: context.cpp
